[remove] 移除新版宣傳頁

--- a/app/src/main/res/layout/content_left_menu_item_header.xml
+++ b/app/src/main/res/layout/content_left_menu_item_header.xml
@@ -79,7 +79,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        tools:visibility="visible">
+        android:visibility="gone"
+        tools:visibility="gone">
 
         <ImageView
             android:layout_width="20dp"
