--- a/app/src/main/res/layout/publicity_title_view.xml
+++ b/app/src/main/res/layout/publicity_title_view.xml
@@ -1,37 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="@dimen/margin_10"
-    android:paddingBottom="@dimen/margin_7"
-    android:orientation="vertical"
     tools:ignore="UseCompoundDrawables, SpUsage">
 
 
-    <androidx.cardview.widget.CardView
+    <com.youth.banner.Banner
+        android:id="@+id/banner"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/margin_14"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="0dp">
-
-        <com.youth.banner.Banner
-            android:id="@+id/banner"
-            android:layout_width="match_parent"
-            android:layout_height="160dp"
-            app:banner_loop_time="3000"
-            app:layout_constraintDimensionRatio="375:310" />
-
-    </androidx.cardview.widget.CardView>
+        android:layout_height="0dp"
+        app:banner_loop_time="3000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="375:310"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <include
         android:id="@+id/publicityToolbar"
         layout="@layout/view_toolbar_publicity"
         android:layout_width="match_parent"
         android:layout_height="@dimen/tool_bar_height"
-        android:visibility="gone"
         app:layout_constraintTop_toTopOf="parent" />
 
 
@@ -41,7 +32,6 @@
         android:background="@color/color_B3000000"
         android:minHeight="71dp"
         android:paddingTop="4dp"
-        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/banner"
         app:layout_constraintStart_toStartOf="parent">
 
@@ -131,5 +121,5 @@
 
     </LinearLayout>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
