--- a/app/src/main/res/layout/activity_game_publicity.xml
+++ b/app/src/main/res/layout/activity_game_publicity.xml
@@ -13,13 +13,33 @@
         tools:context=".ui.game.GameActivity"
         tools:ignore="SpUsage">
 
-        <!-- toolBar -->
-        <include
-            android:id="@+id/gameToolbar"
-            layout="@layout/view_toolbar_main"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/clToolbar"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/tool_bar_height"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <!-- publicity toolBar -->
+            <!-- 移入GamePublicityAdapter的PublicityTitleViewHolder中, 此處先隱藏若確認不需要可移除 -->
+            <include
+                android:id="@+id/publicityToolbar"
+                layout="@layout/view_toolbar_publicity"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/tool_bar_height"
+                android:visibility="gone"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <!-- toolBar -->
+            <include
+                android:id="@+id/gameToolbar"
+                layout="@layout/view_toolbar_main"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/tool_bar_height"
+                android:visibility="gone"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/publicityContainer"
@@ -27,9 +47,56 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/gameToolbar"
+            app:layout_constraintTop_toBottomOf="@id/clToolbar"
             app:navGraph="@navigation/publicity_navigation"
             tools:layout="@layout/fragment_publicity" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/viewBottom"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:background="@color/color_191919_FCFCFC"
+            app:layout_constraintBottom_toBottomOf="parent" >
+
+            <TextView
+                android:id="@+id/tvRegister"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="4dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:background="@drawable/bg_gradient_orange3_orange_light_4dp"
+                android:gravity="center"
+                android:text="@string/btn_register"
+                android:textColor="@color/color_FFFFFF_FFFFFF"
+                android:textAllCaps="true"
+                android:textSize="@dimen/textSize16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/tvLogin"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tvLogin"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                app:layout_goneMarginStart="8dp"
+                android:layout_marginBottom="8dp"
+                android:background="@drawable/bg_gradient_0068d6_0054ac_4dp"
+                android:gravity="center"
+                android:text="@string/btn_login"
+                android:textAllCaps="true"
+                android:textColor="@color/color_FFFFFF_FFFFFF"
+                android:textSize="@dimen/textSize16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/tvRegister"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <include
             android:id="@+id/game_Bottom_Navigation"
