--- a/app/src/main/res/layout/fragment_red_envelope_receive.xml
+++ b/app/src/main/res/layout/fragment_red_envelope_receive.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#4d000000">
 
 
     <RelativeLayout
@@ -21,9 +22,7 @@
             android:id="@+id/iv_red_close"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="5dp"
+            android:layout_toRightOf="@+id/iv_cloth"
             android:src="@drawable/red_envelope_close" />
 
         <ImageView
@@ -31,7 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="-130dp"
+            android:layout_marginTop="-150dp"
             android:rotation="90"
             android:src="@drawable/radiance" />
 
@@ -40,7 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="-15dp"
+            android:layout_marginTop="-28dp"
             android:src="@drawable/red_cloth" />
 
 
