--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -63,6 +63,11 @@
         <item name="android:gravity">center</item>
         <item name="android:windowSoftInputMode">stateHidden</item>
     </style>
+    <style name="FullScreen" parent="Theme.AppCompat.Dialog">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@color/transparent</item>
+        <item name="android:windowIsFloating">false</item>
+    </style>
 
     <style name="OddsButton" parent="Widget.AppCompat.TextView">
         <item name="android:background">@drawable/selector_button_radius_4_odds</item>
