--- a/app/src/main/res/layout/dialog_redenvelope_fail.xml
+++ b/app/src/main/res/layout/dialog_redenvelope_fail.xml
@@ -42,10 +42,11 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/tv_error_desc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginHorizontal="60dp"
+                android:layout_marginHorizontal="40dp"
                 android:layout_marginTop="240dp"
                 android:text="@string/redenvelope_fail_desp"
                 android:textAlignment="center"
