調整搶紅包失敗的 UI

--- a/app/src/main/res/layout/dialog_redenvelope_fail.xml
+++ b/app/src/main/res/layout/dialog_redenvelope_fail.xml
@@ -16,7 +16,8 @@
             android:id="@+id/iv_shinne"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/shinne" />
+            android:src="@drawable/shinne"
+            android:visibility="invisible"/>
 
         <FrameLayout
             android:layout_width="280dp"
