--- a/app/src/main/res/layout/activity_withdraw_commission_detail.xml
+++ b/app/src/main/res/layout/activity_withdraw_commission_detail.xml
@@ -116,4 +116,12 @@
         android:paddingEnd="10dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent" />-->
+
+    <org.cxct.sportlottery.ui.common.RedEnvelopeFloatingButton
+        android:id="@+id/btn_floating_red_envelope"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        tools:visibility="visible" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
