--- a/app/src/main/res/layout/activity_finance.xml
+++ b/app/src/main/res/layout/activity_finance.xml
@@ -22,4 +22,11 @@
         app:layout_constraintTop_toBottomOf="@+id/custom_tool_bar"
         app:navGraph="@navigation/finance_navigation" />
 
+    <org.cxct.sportlottery.ui.common.RedEnvelopeFloatingButton
+        android:id="@+id/btn_floating_red_envelope"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        tools:visibility="visible" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
