--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -20,4 +20,11 @@
         app:navGraph="@navigation/news_navigation"
         tools:layout="@layout/fragment_bank_list" />
 
+    <org.cxct.sportlottery.ui.common.RedEnvelopeFloatingButton
+        android:id="@+id/btn_floating_red_envelope"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        tools:visibility="visible" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
