--- a/app/src/main/res/layout/activity_results_settlement.xml
+++ b/app/src/main/res/layout/activity_results_settlement.xml
@@ -156,4 +156,11 @@
         android:paddingEnd="10dp"
         app:layout_constraintBottom_toBottomOf="parent" />-->
 
+    <org.cxct.sportlottery.ui.common.RedEnvelopeFloatingButton
+        android:id="@+id/btn_floating_red_envelope"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        tools:visibility="visible" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
