--- a/app/src/main/res/navigation/finance_navigation.xml
+++ b/app/src/main/res/navigation/finance_navigation.xml
@@ -24,6 +24,9 @@
         <action
             android:id="@+id/action_financeFragment_to_accountHistoryFragment"
             app:destination="@id/accountHistoryFragment" />
+        <action
+            android:id="@+id/action_financeFragment_to_redEnvelopeFragment"
+            app:destination="@id/redEnvelopeFragment" />
 
     </fragment>
 
@@ -52,7 +55,7 @@
         tools:layout="@layout/activity_account_history_log" />
 
     <fragment
-        android:id="@+id/RedEnvelopeFragment"
+        android:id="@+id/redEnvelopeFragment"
         android:name="org.cxct.sportlottery.ui.finance.RedEnvelopeHistoryFragment"
         android:label="RedEnvelopeFragment"
         tools:layout="@layout/activity_recharge_log" />
