--- a/app/src/main/res/layout/activity_redenvelope_log.xml
+++ b/app/src/main/res/layout/activity_redenvelope_log.xml
@@ -31,7 +31,7 @@
             android:gravity="center"
             android:paddingStart="2dp"
             android:maxLines="1"
-            android:text="@string/recharge_log_order_time"
+            android:text="@string/tran_time"
             android:textColor="@color/color_BBBBBB_333333"
             android:textSize="@dimen/textSize12sp"/>
         <TextView
