--- a/app/src/main/res/layout/activity_game_publicity.xml
+++ b/app/src/main/res/layout/activity_game_publicity.xml
@@ -124,7 +124,6 @@
         android:id="@+id/btn_floating_red_envelope"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone"
-        tools:visibility="visible"/>
+        android:visibility="gone" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
