--- a/app/src/main/res/layout/content_bet_info_item_v3.xml
+++ b/app/src/main/res/layout/content_bet_info_item_v3.xml
@@ -226,9 +226,9 @@
                         android:id="@+id/layoutKeyBoard"
                         android:layout_width="match_parent"
                         android:layout_height="108dp"
-                        android:layout_marginHorizontal="24dp"
-                        android:layout_marginBottom="8dp"
-                        android:paddingTop="10dp"
+                        android:layout_marginHorizontal="@dimen/margin_24"
+                        android:paddingTop="@dimen/margin_10"
+                        android:paddingBottom="@dimen/margin_8"
                         android:visibility="gone"
                         app:layout_constraintBottom_toTopOf="@+id/bottomPaddingView"
                         tools:visibility="visible" />
@@ -271,17 +271,29 @@
                         app:layout_constraintBottom_toTopOf="@id/layoutKeyBoard">
 
                         <TextView
-                            android:id="@+id/tvErrorMessage"
-                            android:layout_width="wrap_content"
+                            android:id="@+id/tvBalanceInsufficientMessage"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:paddingTop="6dp"
-                            android:layout_marginHorizontal="24dp"
+                            android:layout_marginHorizontal="@dimen/margin_24"
+                            android:paddingTop="@dimen/margin_6"
+                            android:text="@string/bet_info_bet_balance_insufficient"
+                            android:textColor="@color/color_E44438_e44438"
+                            android:textSize="@dimen/textSize13sp"
+                            android:visibility="gone"
+                            tools:visibility="visible" />
+
+                        <TextView
+                            android:id="@+id/tvErrorMessage"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="@dimen/margin_24"
+                            android:paddingTop="@dimen/margin_6"
+                            android:text="@string/bet_info_list_minimum_limit_amount"
                             android:textColor="@color/color_E44438_e44438"
                             android:textSize="@dimen/textSize13sp"
                             android:visibility="gone"
                             app:layout_constraintBottom_toTopOf="@id/tv_odd_content_changed"
                             app:layout_constraintStart_toStartOf="@id/et_bet"
-                            tools:text="@string/bet_info_list_minimum_limit_amount"
                             tools:visibility="visible" />
 
                         <TextView
