[新增] 盤口選擇頁面 盤口順序依照後端配置

--- a/app/src/main/res/layout/dialog_change_odd_type_full_screen.xml
+++ b/app/src/main/res/layout/dialog_change_odd_type_full_screen.xml
@@ -75,6 +75,7 @@
 
 
     <RadioGroup
+        android:id="@+id/oddsTypeRg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
