--- a/app/src/main/res/layout/dialog_redenvelope_fail.xml
+++ b/app/src/main/res/layout/dialog_redenvelope_fail.xml
@@ -51,7 +51,7 @@
                 android:layout_marginTop="240dp"
                 android:text="@string/redenvelope_fail_desp"
                 android:textAlignment="center"
-                android:textColor="@color/color_1A1A1A_FFFFFF"
+                android:textColor="@color/color_FFFFFF"
                 android:textSize="@dimen/textSize16sp"
                 android:textStyle="bold" />
 
