--- a/app/src/main/res/layout/dialog_redenvelope_success.xml
+++ b/app/src/main/res/layout/dialog_redenvelope_success.xml
@@ -50,7 +50,7 @@
                 android:layout_marginTop="210dp"
                 android:text="@string/red_envelope_congratulations"
                 android:textAlignment="center"
-                android:textColor="@color/color_1A1A1A_FFFFFF"
+                android:textColor="@color/color_FFFFFF"
                 android:textSize="@dimen/textSize16sp"
                 android:textStyle="bold" />
 
@@ -62,7 +62,7 @@
                 android:layout_marginBottom="35dp"
                 android:text="@string/pls_check_amount"
                 android:textAlignment="center"
-                android:textColor="@color/color_1A1A1A_FFFFFF"
+                android:textColor="@color/color_FFFFFF"
                 android:textSize="@dimen/textSize12sp" />
 
         </FrameLayout>
