--- a/app/src/main/res/layout/fragment_credentials.xml
+++ b/app/src/main/res/layout/fragment_credentials.xml
@@ -43,6 +43,7 @@
         android:text="@string/upload_photo_tips"
         android:textColor="@color/color_D65752"
         android:textSize="@dimen/textSize12sp"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvUploadTip" />
 
@@ -64,6 +65,7 @@
         android:text="@string/upload_photo_tips"
         android:textColor="@color/color_D65752"
         android:textSize="@dimen/textSize12sp"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view_identity_photo" />
 
