--- a/app/src/main/res/layout/fragment_register_credentials.xml
+++ b/app/src/main/res/layout/fragment_register_credentials.xml
@@ -50,6 +50,7 @@
             android:text="@string/upload_photo_tips"
             android:textColor="@color/color_D65752"
             android:textSize="@dimen/textSize12sp"
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvUploadTip" />
 
