--- a/app/src/main/res/layout/fragment_other_bet_record.xml
+++ b/app/src/main/res/layout/fragment_other_bet_record.xml
@@ -22,15 +22,31 @@
         app:defaultStatusText="@string/all_plat_type"
         app:layout_constraintTop_toBottomOf="@id/date_search_bar" />
 
+    <TextView
+        android:id="@+id/tvUsTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="@dimen/margin_8"
+        android:layout_marginHorizontal="@dimen/margin_10"
+        android:drawablePadding="@dimen/margin_6"
+        android:text="@string/text_us_east_time"
+        android:textColor="@color/color_909090_666666"
+        android:textSize="@dimen/textSize12sp"
+        app:drawableLeftCompat="@drawable/ic_info_white"
+        app:drawableTint="@color/color_909090_666666"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/status_selector"
+        android:visibility="visible" />
 
     <LinearLayout
         android:id="@+id/linearLayout5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_8"
         android:background="@color/color_262626_edf4ff"
         android:orientation="horizontal"
         android:paddingVertical="4dp"
-        app:layout_constraintTop_toBottomOf="@id/status_selector">
+        app:layout_constraintTop_toBottomOf="@id/tvUsTime">
 
         <TextView
             android:layout_width="0dp"
@@ -40,7 +56,7 @@
             android:maxLines="2"
             android:text="@string/bet_time2"
             android:textColor="@color/color_BBBBBB_333333"
-            android:textSize="@dimen/textSize12sp"  />
+            android:textSize="@dimen/textSize12sp" />
 
         <TextView
             android:layout_width="0dp"
