--- a/app/src/main/res/drawable/ic_singles.xml
+++ b/app/src/main/res/drawable/ic_singles.xml
@@ -1,18 +1,24 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="10dp"
-    android:height="10dp"
-    android:viewportWidth="10"
-    android:viewportHeight="10">
+    xmlns:aapt="http://schemas.android.com/aapt"
+    android:width="13dp"
+    android:height="14dp"
+    android:viewportWidth="13"
+    android:viewportHeight="14">
   <path
-      android:pathData="M6.952,1.613L1.368,1.613C1.165,1.613 1,1.782 1,1.991L1,9.622C1,9.83 1.165,10 1.368,10L6.952,10C7.155,10 7.32,9.83 7.32,9.622L7.32,1.991C7.32,1.782 7.155,1.613 6.952,1.613ZM5.706,5.645L2.725,5.645C2.552,5.645 2.412,5.501 2.412,5.323C2.412,5.144 2.552,5 2.725,5L5.706,5C5.879,5 6.02,5.144 6.02,5.323C6.02,5.501 5.879,5.645 5.706,5.645ZM5.706,4.355L2.725,4.355C2.552,4.355 2.412,4.21 2.412,4.032C2.412,3.854 2.552,3.71 2.725,3.71L5.706,3.71C5.879,3.71 6.02,3.854 6.02,4.032C6.02,4.21 5.879,4.355 5.706,4.355Z"
+      android:pathData="M12.137,2C12.587,2 12.952,2.365 12.952,2.815L12.952,12.73C12.952,12.73 12.952,13.546 12.137,13.546L4.415,13.545C3.965,13.545 3.6,13.18 3.6,12.73L3.6,2.815C3.6,2.365 3.965,2 4.415,2L12.137,2ZM9.271,0.392C10.301,0.392 10.094,1.392 10.094,1.392L4.212,1.392L4.212,1.392C3.6,1.392 2.948,1.685 2.936,2.655C2.932,2.973 2.93,3.519 2.928,4.197L2.927,4.668C2.927,4.749 2.927,4.832 2.927,4.916L2.927,7.382C2.927,7.477 2.928,7.572 2.928,7.667L2.928,8.236C2.928,8.33 2.928,8.424 2.929,8.517L2.929,9.07C2.93,9.342 2.93,9.608 2.93,9.863L2.931,10.357C2.932,10.597 2.932,10.823 2.933,11.033L2.933,11.43C2.934,11.617 2.934,11.785 2.934,11.93L2.935,12.295C2.935,12.327 2.935,12.356 2.935,12.382L2.936,12.545L2.936,12.545L1.794,12.545C1.222,12.545 0.734,11.931 0.734,11.333L0.734,1.207C0.734,0.757 1.099,0.392 1.55,0.392L9.271,0.392ZM7.952,6.917L5.469,6.917C5.221,6.917 5.055,7.083 5.055,7.331C5.055,7.548 5.182,7.702 5.38,7.737L5.469,7.745L7.952,7.745C8.2,7.745 8.366,7.579 8.366,7.331C8.366,7.083 8.2,6.917 7.952,6.917ZM11.262,5.262L5.469,5.262C5.221,5.262 5.055,5.51 5.055,5.676C5.055,5.893 5.182,6.047 5.38,6.082L5.469,6.09L11.262,6.09C11.51,6.09 11.676,5.924 11.676,5.676C11.676,5.51 11.51,5.262 11.262,5.262ZM11.262,3.607L5.469,3.607C5.221,3.607 5.055,3.772 5.055,4.021C5.055,4.238 5.182,4.392 5.38,4.427L5.469,4.435L11.262,4.435C11.51,4.435 11.676,4.269 11.676,4.021C11.676,3.772 11.51,3.607 11.262,3.607Z"
       android:strokeWidth="1"
-      android:fillColor="#086FF4"
       android:fillType="nonZero"
-      android:strokeColor="#00000000"/>
-  <path
-      android:pathData="M9,0.968L9,8.065C9,8.552 8.619,9.032 7.947,9.032L7.947,1.991C7.947,1.427 7.501,0.968 6.952,0.968L2.053,0.968C2.053,0.434 2.5,0 3.05,0L8.003,0C8.553,0 9,0.434 9,0.968Z"
-      android:strokeWidth="1"
-      android:fillColor="#086FF4"
-      android:fillType="nonZero"
-      android:strokeColor="#00000000"/>
+      android:strokeColor="#00000000">
+    <aapt:attr name="android:fillColor">
+      <gradient 
+          android:startX="1.573"
+          android:startY="0.392"
+          android:endX="12.113"
+          android:endY="13.546"
+          android:type="linear">
+        <item android:offset="0" android:color="#FF78DCFF"/>
+        <item android:offset="1" android:color="#FF3CA0FF"/>
+      </gradient>
+    </aapt:attr>
+  </path>
 </vector>
