--- a/app/src/main/res/drawable-night/bg_radius_2_edittext_error.xml
+++ b/app/src/main/res/drawable-night/bg_radius_2_edittext_error.xml
@@ -18,7 +18,7 @@
             <corners android:radius="2dp" />
             <stroke
                 android:width="1dp"
-                android:color="@color/color_6BABFF" />
+                android:color="@color/color_E44438" />
             <solid android:color="@color/color_191919" />
         </shape>
     </item>
