--- a/app/src/main/res/drawable/bg_button_keyboard.xml
+++ b/app/src/main/res/drawable/bg_button_keyboard.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="4dp" />
+    <corners android:radius="@dimen/keyboard_radius" />
 
-    <gradient
-        android:angle="180"
-        android:endColor="#EDEAED"
-        android:startColor="#D4D2D5"
-        android:type="linear"
-        android:useLevel="true" />
+    <gradient android:type="linear"
+        android:useLevel="true"
+        android:startColor="#ffedeaed"
+        android:endColor="#ffd4d2d5"
+        android:angle="180" />
 
 
 </shape>
