--- a/app/src/main/res/drawable/bg_frame_4dp_dark.xml
+++ b/app/src/main/res/drawable/bg_frame_4dp_dark.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <corners android:radius="4dp"/>
-            <solid android:color="@color/color_060F20"/>
+            <corners android:radius="@dimen/keyboard_radius" />
+            <solid android:color="@color/color_062442"/>
         </shape>
     </item>
 </selector>
