--- a/app/src/main/res/drawable/bg_radius_2_edittext_error.xml
+++ b/app/src/main/res/drawable/bg_radius_2_edittext_error.xml
@@ -4,7 +4,7 @@
 
         <shape android:shape="rectangle">
             <corners android:radius="2dp" />
-            <solid android:color="@color/color_232426" />
+            <solid android:color="@color/color_FFDADA" />
         </shape>
     </item>
 
@@ -18,8 +18,8 @@
             <corners android:radius="2dp" />
             <stroke
                 android:width="1dp"
-                android:color="@color/color_6BABFF" />
-            <solid android:color="@color/color_191919" />
+                android:color="@color/color_E44438" />
+            <solid android:color="@color/color_FCFCFC" />
         </shape>
     </item>
 </layer-list>
