--- a/app/src/main/res/drawable/bg_radius_4_button_345577.xml
+++ b/app/src/main/res/drawable/bg_radius_4_button_345577.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="4dp" />
-    <solid android:color="@color/color_7C8288" />
+    <corners android:radius="@dimen/keyboard_radius" />
+    <solid android:color="@color/color_345577" />
 </shape>
