--- a/app/src/main/res/layout/item_bet_list_batch_control_connect_v3.xml
+++ b/app/src/main/res/layout/item_bet_list_batch_control_connect_v3.xml
@@ -27,7 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/color_191919_FCFCFC"
-            android:paddingBottom="18dp"
+            android:paddingBottom="10dp"
             app:layout_constraintHeight_default="wrap">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -42,12 +42,12 @@
                     android:id="@+id/tv_parlay_type"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/margin_8"
-                    android:drawableStart="@drawable/ic_parlay"
+                    android:layout_marginStart="@dimen/margin_18"
                     android:drawablePadding="@dimen/margin_6"
                     android:textColor="@color/color_BBBBBB_333333"
                     android:textSize="@dimen/textSize15sp"
                     android:textStyle="bold"
+                    app:drawableStartCompat="@drawable/ic_parlay"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:text="3串1" />
@@ -56,7 +56,7 @@
                     android:id="@+id/btn_rule"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/margin_20"
+                    android:layout_marginEnd="@dimen/margin_14"
                     android:padding="@dimen/margin_4"
                     android:src="@drawable/ic_question_mark"
                     app:layout_constraintBottom_toBottomOf="@+id/tv_parlay_type"
@@ -82,11 +82,11 @@
                     android:id="@+id/et_bet_parlay"
                     android:layout_width="0dp"
                     android:layout_height="@dimen/et_bet_height"
-                    android:layout_marginStart="@dimen/margin_24"
+                    android:layout_marginStart="@dimen/margin_18"
                     android:layout_marginTop="@dimen/margin_8"
                     android:layout_marginEnd="17dp"
                     android:layout_weight="6"
-                    android:background="@drawable/effect_select_bet_edit_text_fill_color_white"
+                    android:background="@drawable/bg_radius_2_edittext_unfocus"
                     android:hint="@string/bet_info_input_quota"
                     android:inputType="numberDecimal"
                     android:letterSpacing="0.05"
@@ -95,30 +95,17 @@
                     android:textColor="@color/color_BBBBBB_333333"
                     android:textColorHint="@color/color_404040_cccccc"
                     android:textSize="@dimen/textSize16sp"
-                    app:layout_constraintBottom_toTopOf="@+id/tvErrorMessage"
+                    app:layout_constraintBottom_toTopOf="@+id/ll_hint_container"
                     app:layout_constraintEnd_toStartOf="@+id/tv_symbol_count"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tv_parlay_type" />
-
-
-                <View
-                    android:id="@+id/et_clickable"
-                    android:layout_width="0dp"
-                    android:layout_height="44dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_weight="6"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_parlay_type"
-                    app:layout_constraintWidth_percent="0.442"
-                    tools:visibility="gone" />
 
                 <TextView
                     android:id="@+id/tv_symbol_count"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="X"
-                    android:textColor="@color/color_BBBBBB_060F20"
+                    android:textColor="@color/color_A0B4D4_060F20"
                     android:textSize="@dimen/textSize12sp"
                     app:layout_constraintBottom_toBottomOf="@+id/et_bet_parlay"
                     app:layout_constraintEnd_toStartOf="@+id/tv_com_count"
@@ -128,36 +115,53 @@
                     android:id="@+id/tv_com_count"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/margin_24"
-                    android:textColor="@color/color_BBBBBB_060F20"
+                    android:layout_marginEnd="@dimen/margin_18"
+                    android:textColor="@color/color_A0B4D4_060F20"
                     android:textSize="@dimen/textSize12sp"
                     app:layout_constraintBottom_toBottomOf="@id/et_bet_parlay"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/et_bet_parlay"
                     tools:text="26" />
 
-                <TextView
-                    android:id="@+id/tvErrorMessage"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:id="@+id/ll_hint_container"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="24dp"
-                    android:paddingTop="6dp"
-                    android:textColor="@color/color_E44438_e44438"
-                    android:textSize="@dimen/textSize13sp"
-                    android:visibility="gone"
                     app:layout_constraintBottom_toTopOf="@+id/layoutKeyBoard"
-                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/et_bet_parlay"
-                    tools:text="@string/bet_info_list_minimum_limit_amount"
-                    tools:visibility="visible" />
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/tvBalanceInsufficientMessageParlay"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="@dimen/margin_18"
+                        android:paddingTop="@dimen/margin_6"
+                        android:text="@string/bet_info_bet_balance_insufficient"
+                        android:textColor="@color/color_E44438_e44438"
+                        android:textSize="@dimen/textSize13sp"
+                        android:visibility="gone"
+                        tools:visibility="visible" />
+
+                    <TextView
+                        android:id="@+id/tvErrorMessageParlay"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="@dimen/margin_18"
+                        android:paddingTop="6dp"
+                        android:textColor="@color/color_E44438_e44438"
+                        android:textSize="@dimen/textSize13sp"
+                        android:visibility="gone"
+                        android:text="@string/bet_info_list_minimum_limit_amount"
+                        tools:visibility="visible" />
+                </LinearLayout>
 
                 <org.cxct.sportlottery.util.KeyboardView
                     android:id="@+id/layoutKeyBoard"
                     android:layout_width="match_parent"
-                    android:layout_height="108dp"
-                    android:layout_marginHorizontal="24dp"
-                    android:paddingTop="10dp"
-                    android:layout_marginBottom="8dp"
+                    android:layout_height="@dimen/keyboard_height"
+                    android:layout_marginHorizontal="@dimen/margin_18"
+                    android:paddingTop="@dimen/margin_10"
                     android:visibility="gone"
                     app:layout_constraintBottom_toBottomOf="parent"
                     tools:visibility="visible" />
