--- a/app/src/main/res/layout/item_bet_list_batch_control_v3.xml
+++ b/app/src/main/res/layout/item_bet_list_batch_control_v3.xml
@@ -17,45 +17,48 @@
 
     </data>
 
-    <FrameLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorBackground">
+        android:layout_marginHorizontal="@dimen/margin_10"
+        android:layout_marginTop="1dp"
+        android:layout_marginBottom="@dimen/margin_10"
+        app:cardCornerRadius="4dp"
+        app:cardElevation="1dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_item_background_single"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/color_141414_F3F4F5"
-            android:paddingBottom="18dp"
+            android:layout_height="wrap_content"
+            android:background="@color/color_202020_fcfcfc"
+            android:paddingBottom="@dimen/margin_10"
             app:layout_constraintHeight_default="wrap">
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/margin_1"
-                android:layout_marginHorizontal="@dimen/margin_10"
-                android:background="@color/color_1F1F1F_e6e6e6"
-                app:layout_constraintTop_toTopOf="parent" />
+            <!--            <View-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="@dimen/margin_1"-->
+            <!--                android:layout_marginHorizontal="@dimen/margin_10"-->
+            <!--                android:background="@color/color_1F1F1F_e6e6e6"-->
+            <!--                app:layout_constraintTop_toTopOf="parent" />-->
 
             <ImageView
                 android:id="@+id/btn_rule_single"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_10"
-                android:layout_marginEnd="@dimen/margin_20"
+                android:layout_marginEnd="@dimen/margin_4"
                 android:padding="@dimen/margin_4"
                 android:src="@drawable/ic_question_mark"
                 android:visibility="visible"
+                app:layout_constraintBottom_toBottomOf="@+id/titleLayout"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="@+id/titleLayout" />
 
             <LinearLayout
-                android:id="@+id/layoutInput"
-                android:layout_width="match_parent"
+                android:id="@+id/titleLayout"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingEnd="@dimen/margin_24"
-                android:paddingTop="@dimen/margin_10"
+                android:layout_marginStart="@dimen/margin_8"
+                android:layout_marginTop="@dimen/margin_8"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
@@ -63,122 +66,139 @@
                     android:id="@+id/tvSingle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:drawablePadding="@dimen/margin_5"
                     android:text="@string/bet_list_single"
-                    android:drawableStart="@drawable/ic_singles"
-                    android:drawablePadding="@dimen/margin_6"
-                    android:layout_marginStart="@dimen/margin_8"
                     android:textColor="@color/color_BBBBBB_333333"
                     android:textSize="@dimen/textSize15sp"
-                    android:textStyle="bold" />
+                    app:drawableStartCompat="@drawable/ic_singles" />
 
-                <LinearLayout
-                    android:id="@+id/ll_winnable"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="@dimen/margin_10"
-                    android:layout_marginStart="@dimen/margin_24"
-                    android:layout_weight="5"
-                    android:gravity="end|center"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="@string/bet_info_win_quota"
-                        android:textColor="@color/color_BBBBBB_333333"
-                        android:textSize="@dimen/textSize12sp" />
-
-                    <TextView
-                        android:id="@+id/tv_winnable_amount"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="right"
-                        android:textColor="@color/color_BBBBBB_333333"
-                        android:textSize="@dimen/textSize12sp"
-                        tools:text="9.720" />
-
-                </LinearLayout>
-
-
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/margin_24"
-                    android:layout_marginTop="7dp">
+                    android:layout_marginStart="@dimen/margin_6"
+                    android:text="X"
+                    android:textColor="@color/color_A0B4D4_060F20"
+                    android:textSize="@dimen/textSize13sp" />
 
-                    <FrameLayout
-                        android:layout_width="0dp"
-                        android:layout_height="@dimen/et_bet_height"
-                        android:layout_marginEnd="17dp"
-                        android:layout_weight="6">
-
-                        <EditText
-                            android:id="@+id/et_bet_single"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:background="@drawable/effect_select_bet_edit_text_fill_color_white"
-                            android:hint="@string/bet_info_input_quota"
-                            android:inputType="numberDecimal"
-                            android:letterSpacing="0.05"
-                            android:maxLength="7"
-                            android:paddingStart="10dp"
-                            android:textColor="@color/color_BBBBBB_333333"
-                            android:textColorHint="@color/color_404040_cccccc"
-                            android:textSize="@dimen/textSize16sp" />
-
-                        <!--                        <View-->
-                        <!--                            android:id="@+id/et_container"-->
-                        <!--                            android:visibility="gone"-->
-                        <!--                            android:layout_width="match_parent"-->
-                        <!--                            android:layout_height="match_parent" />-->
-
-                    </FrameLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:gravity="center">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginEnd="4dp"
-                            android:text="X"
-                            android:textColor="@color/color_BBBBBB_060F20"
-                            android:textSize="@dimen/textSize13sp" />
-
-                        <TextView
-                            android:id="@+id/tv_single_count"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textColor="@color/color_BBBBBB_060F20"
-                            android:textSize="@dimen/textSize13sp"
-                            tools:text="3" />
-
-                    </LinearLayout>
-
-
-                </LinearLayout>
-
-
+                <TextView
+                    android:id="@+id/tv_single_count"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/color_A0B4D4_060F20"
+                    android:textSize="@dimen/textSize13sp"
+                    tools:text="3" />
             </LinearLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/clInputLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/margin_8"
+                android:paddingTop="@dimen/margin_10"
+                app:layout_constraintTop_toBottomOf="@+id/titleLayout">
+
+                <EditText
+                    android:id="@+id/et_bet_single"
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/et_bet_height"
+                    android:layout_marginEnd="@dimen/margin_6"
+                    android:background="@drawable/bg_radius_2_edittext_unfocus"
+                    android:gravity="end|center_vertical"
+                    android:inputType="numberDecimal"
+                    android:letterSpacing="0.05"
+                    android:maxLength="7"
+                    android:paddingHorizontal="12dp"
+                    android:textColor="@color/color_BBBBBB_333333"
+                    android:textSize="@dimen/textSize16sp"
+                    android:visibility="visible"
+                    app:layout_constraintEnd_toStartOf="@+id/et_win_single"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/tv_hint_single_default"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="12dp"
+                    android:paddingTop="8dp"
+                    android:text="@string/bet_stake"
+                    android:textColor="@color/color_7F7F7F_999999"
+                    android:textSize="@dimen/textSize12sp"
+                    android:visibility="visible"
+                    app:layout_constraintStart_toStartOf="@+id/et_bet_single"
+                    app:layout_constraintTop_toTopOf="@+id/et_bet_single" />
+
+                <TextView
+                    android:id="@+id/tv_hint_single_amount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="6dp"
+                    android:paddingTop="3dp"
+                    android:text="@string/bet_stake"
+                    android:textColor="@color/color_BBBBBB_333333"
+                    android:textSize="@dimen/textSize10sp"
+                    android:visibility="gone"
+                    app:layout_constraintStart_toStartOf="@+id/et_bet_single"
+                    app:layout_constraintTop_toTopOf="@+id/et_bet_single" />
+
+                <EditText
+                    android:id="@+id/et_win_single"
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/et_bet_height"
+                    android:background="@drawable/bg_radius_2_edittext_unfocus"
+                    android:enabled="false"
+                    android:gravity="end|center_vertical"
+                    android:inputType="numberDecimal"
+                    android:letterSpacing="0.05"
+                    android:maxLength="7"
+                    android:paddingHorizontal="12dp"
+                    android:textColor="@color/color_BBBBBB_333333"
+                    android:textSize="@dimen/textSize16sp"
+                    android:visibility="visible"
+                    app:layout_constraintBottom_toBottomOf="@id/et_bet_single"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/et_bet_single"
+                    app:layout_constraintTop_toTopOf="@+id/et_bet_single" />
+
+                <TextView
+                    android:id="@+id/tv_win_hint_single_default"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="12dp"
+                    android:paddingTop="8dp"
+                    android:text="@string/win"
+                    android:textColor="@color/color_7F7F7F_999999"
+                    android:textSize="@dimen/textSize12sp"
+                    android:visibility="visible"
+                    app:layout_constraintStart_toStartOf="@+id/et_win_single"
+                    app:layout_constraintTop_toTopOf="@+id/et_win_single" />
+
+                <TextView
+                    android:id="@+id/tv_win_hint_single_amount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="6dp"
+                    android:paddingTop="3dp"
+                    android:text="@string/win"
+                    android:textColor="@color/color_BBBBBB_333333"
+                    android:textSize="@dimen/textSize10sp"
+                    android:visibility="gone"
+                    app:layout_constraintStart_toStartOf="@+id/et_win_single"
+                    app:layout_constraintTop_toTopOf="@+id/et_win_single" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <org.cxct.sportlottery.util.KeyboardView
                 android:id="@+id/layoutKeyBoard"
                 android:layout_width="match_parent"
-                android:layout_height="108dp"
-                android:paddingTop="10dp"
-                android:layout_marginHorizontal="24dp"
-                android:layout_marginBottom="8dp"
+                android:layout_height="@dimen/keyboard_height"
+                android:layout_marginHorizontal="@dimen/margin_8"
+                android:paddingTop="@dimen/margin_10"
                 android:visibility="gone"
-                app:layout_constraintTop_toBottomOf="@+id/layoutInput"
-                app:layout_constraintBottom_toBottomOf="parent"
-                tools:visibility="visible"/>
-
+                app:layout_constraintTop_toBottomOf="@+id/clInputLayout"
+                tools:visibility="visible" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </FrameLayout>
-
+    </androidx.cardview.widget.CardView>
 
 </layout>
