--- a/app/src/main/res/layout/item_number_keyboard_layout.xml
+++ b/app/src/main/res/layout/item_number_keyboard_layout.xml
@@ -3,7 +3,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="108dp"
+    android:layout_height="@dimen/keyboard_height"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/bg_frame_4dp_dark"
     android:orientation="vertical"
@@ -22,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@drawable/bg_radius_4_button_7c8288"
+            android:background="@drawable/bg_radius_4_button_345577"
             android:gravity="center"
             android:text="@string/keyboard_max"
             android:textColor="@color/white"
@@ -35,7 +35,7 @@
             android:layout_height="match_parent"
             android:layout_marginStart="@dimen/margin_3"
             android:layout_weight="1"
-            android:background="@drawable/bg_radius_4_button_7c8288"
+            android:background="@drawable/bg_radius_4_button_345577"
             android:gravity="center"
             android:text="+25"
             android:textColor="@color/white"
@@ -49,7 +49,7 @@
             android:layout_height="match_parent"
             android:layout_marginStart="@dimen/margin_3"
             android:layout_weight="1"
-            android:background="@drawable/bg_radius_4_button_7c8288"
+            android:background="@drawable/bg_radius_4_button_345577"
             android:gravity="center"
             android:text="+50"
             android:textColor="@color/white"
@@ -63,7 +63,7 @@
             android:layout_height="match_parent"
             android:layout_marginStart="@dimen/margin_3"
             android:layout_weight="1"
-            android:background="@drawable/bg_radius_4_button_7c8288"
+            android:background="@drawable/bg_radius_4_button_345577"
             android:gravity="center"
             android:text="+75"
             android:textColor="@color/white"
