--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -15,9 +15,20 @@
     <color name="color_1D4C99_0760D4">@color/color_1D4C99</color>
     <color name="color_0760D4_0760D4">@color/color_0760D4</color>
     <color name="color_171E26_9CC7FF">@color/color_171E26</color>
+    <color name="color_171E26_86BAFF">@color/color_171E26</color>
     <color name="color_232426_E7F1FF">@color/color_232426</color>
+    <color name="color_232426_DAEAFF">@color/color_232426</color>
     <color name="color_77A0CC_405366">@color/color_77A0CC</color>
     <color name="color_3A3C40_DEE7F5">@color/color_3A3C40</color>
+    <color name="color_FFDCA8_FFF3E1">@color/color_FFDCA8</color>
+    <color name="color_B95700_D26300">@color/color_B95700</color>
+    <color name="color_15B63A_0C8A29">@color/color_15B63A</color>
+    <color name="color_2E2E2E_EBEBEB">@color/color_2E2E2E</color>
+    <color name="color_c8c8c8_103861">@color/color_c8c8c8</color>
+    <color name="color_303030_d2d2d2">@color/color_303030</color>
+    <color name="color_F75452_ce3636">@color/color_F75452</color>
+    <color name="color_A0B4D4_060F20">@color/color_A0B4D4</color>
+    <color name="color_999999_999999">@color/color_999999</color>
 
     <color name="color_FF9E3C_FF9E3C">@color/color_FF9E3C</color>
     <color name="color_FF9143_ff9200">@color/color_FF9143</color>
@@ -86,6 +97,8 @@
     <color name="color_cccccc_333333">@color/color_cccccc</color>
     <color name="color_212121_ffffff">@color/color_212121</color>
     <color name="color_b4b4b4_848b9f">@color/color_b4b4b4</color>
+    <color name="color_202020_fcfcfc">@color/color_202020</color>
+    <color name="color_939393_666666">@color/color_939393</color>
 
 
     <color name="color_FFFFFF_DE000000">@color/color_FFFFFF</color>
