--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -106,6 +106,23 @@
     <color name="color_DEE7F5">#DEE7F5</color>
     <color name="color_3A3C40">#3A3C40</color>
     <color name="color_FA0200">#FA0200</color>
+    <color name="color_DAEAFF">#DAEAFF</color>
+    <color name="color_86BAFF">#86BAFF</color>
+    <color name="color_6BABFF">#6BABFF</color>
+    <color name="color_FFDCA8">#FFDCA8</color>
+    <color name="color_FFF3E1">#FFF3E1</color>
+    <color name="color_B95700">#B95700</color>
+    <color name="color_D26300">#D26300</color>
+    <color name="color_FFDADA">#FFDADA</color>
+    <color name="color_0C8A29">#0C8A29</color>
+    <color name="color_15B63A">#15B63A</color>
+    <color name="color_EF1E28">#EF1E28</color>
+    <color name="color_EBEBEB">#EBEBEB</color>
+    <color name="color_2E2E2E">#2E2E2E</color>
+    <color name="color_103861">#103861</color>
+    <color name="color_D2D2D2">#D2D2D2</color>
+    <color name="color_c8c8c8">#c8c8c8</color>
+    <color name="color_A0B4D4">#A0B4D4</color>
     <!--以下部分，是系统中的白天的色值 -->
     <!--命名規則，color_[夜間色碼]_[白天色碼] -->
 
@@ -122,9 +139,20 @@
     <color name="color_FFFFFF_0760D4">@color/color_0760D4</color>
     <color name="color_0760D4_0760D4">@color/color_0760D4</color>
     <color name="color_171E26_9CC7FF">@color/color_9CC7FF</color>
+    <color name="color_171E26_86BAFF">@color/color_86BAFF</color>
     <color name="color_232426_E7F1FF">@color/color_E7F1FF</color>
+    <color name="color_232426_DAEAFF">@color/color_DAEAFF</color>
     <color name="color_77A0CC_405366">@color/color_405366</color>
     <color name="color_3A3C40_DEE7F5">@color/color_DEE7F5</color>
+    <color name="color_FFDCA8_FFF3E1">@color/color_FFF3E1</color>
+    <color name="color_B95700_D26300">@color/color_D26300</color>
+    <color name="color_15B63A_0C8A29">@color/color_0C8A29</color>
+    <color name="color_2E2E2E_EBEBEB">@color/color_EBEBEB</color>
+    <color name="color_c8c8c8_103861">@color/color_103861</color>
+    <color name="color_303030_d2d2d2">@color/color_D2D2D2</color>
+    <color name="color_F75452_ce3636">@color/color_ce3636</color>
+    <color name="color_A0B4D4_060F20">@color/color_060F20</color>
+    <color name="color_999999_999999">@color/color_999999</color>
 
     <color name="color_FF9E3C_FF9E3C">@color/color_FF9E3C</color>
     <color name="color_FF9143_ff9200">@color/color_ff9200</color>
@@ -191,6 +219,8 @@
     <color name="color_cccccc_333333">@color/color_333333</color>
     <color name="color_212121_ffffff">@color/color_FFFFFF</color>
     <color name="color_b4b4b4_848b9f">@color/color_848B9F</color>
+    <color name="color_202020_fcfcfc">@color/color_FCFCFC</color>
+    <color name="color_939393_666666">@color/color_666666</color>
 
 
     <color name="color_FFFFFF_DE000000">@color/color_DE000000</color>
@@ -320,6 +350,7 @@
     <color name="color_F08E29">#ffF08E29</color>
     <color name="color_222222">#222222</color>
     <color name="color_060F20">#060F20</color>
+    <color name="color_062442">#062442</color>
     <color name="color_D65752">#D65752</color>
     <color name="color_F9DDDE">#F9DDDE</color>
     <color name="color_FFE136">#FFE136</color>
@@ -333,6 +364,7 @@
     <color name="color_AFAFB1">#AFAFB1</color>
     <color name="color_FFFDFE">#FFFDFE</color>
     <color name="color_7C8288">#7C8288</color>
+    <color name="color_345577">#345577</color>
     <!-- ======================================= -->
 
 
