--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,8 +2,8 @@
 <resources>
     <dimen name="tool_bar_height">48dp</dimen>
     <dimen name="notification_view_height">21dp</dimen>
-    <dimen name="tool_bar_notification_height">52dp</dimen>
-    <dimen name="bet_list_bar_height">48dp</dimen>
+    <dimen name="bet_list_top_padding_height">48dp</dimen>
+    <dimen name="bet_list_bar_height">42dp</dimen>
     <dimen name="bottom_nav_bar_height">55dp</dimen>
 
     <dimen name="textSize7sp">7dp</dimen>
@@ -150,5 +150,10 @@
     <dimen name="live_player_height">232dp</dimen>
 
     <dimen name="et_bet_height">34dp</dimen>
+
+    <dimen name="bet_info_hint_view_height">32dp</dimen>
+
+    <dimen name="keyboard_radius">2dp</dimen>
+    <dimen name="keyboard_height">108dp</dimen>
 
 </resources>
